--- a/public/views/psychologue/clients_profil.hbs
+++ b/public/views/psychologue/clients_profil.hbs
@@ -8,7 +8,7 @@
 
       <div class="card-body" id="body">
 
-        <form action="/client/profil/profil_update" method="post">
+        <form action="/clients/profil_update/{{client.dataValues.id_client}}" method="{{post}}">
 
           <h6 class="text-center mb-1"> Client </h6>
           <hr class="mt-4">
@@ -66,21 +66,21 @@
           <div class="row mt-2">
             <div class="col">
               <label for="courriel_extra1">Courriel extra 1: </label>
-              <input value="{{dataValues.Email_Extra1}}" type="text" class="form-control" name="courriel_extra1" placeholder="Entrer le courriel du contact" {{../condition}}>
+              <input value="{{dataValues.Email_Extra1}}" type="text" class="form-control" name="courriel_extra1" placeholder="Entrer le courriel du contact" {{../condition2}}>
             </div>
           </div>
 
           <div class="row mt-2">
             <div class="col">
               <label for="courriel_extra2">Courriel extra 2: </label>
-              <input value="{{dataValues.Email_Extra2}}" type="text" class="form-control" name="courriel_extra2" placeholder="Entrer le courriel du contact" {{../condition}}>
+              <input value="{{dataValues.Email_Extra2}}" type="text" class="form-control" name="courriel_extra2" placeholder="Entrer le courriel du contact" {{../condition2}}>
             </div>
           </div>
 
           <div class="row mt-2">
             <div class="col">
               <label for="courriel_extra3">Courriel extra 3: {{dataValues.Email_Extra3}}</label>
-              <input value="{{dataValues.Email_Extra3}}" type="text" class="form-control" name="courriel_extra3" placeholder="Entrer le courriel du contact" {{../condition}}>
+              <input value="{{dataValues.Email_Extra3}}" type="text" class="form-control" name="courriel_extra3" placeholder="Entrer le courriel du contact" {{../condition2}}>
             </div>
           </div>
 
