--- a/public/views/psychologue/clients_profil.hbs
+++ b/public/views/psychologue/clients_profil.hbs
@@ -97,7 +97,7 @@
 
           <div class="row mt-2">
             <div class="col text-center">
-              <button type="submit" class="btn btn-success center-block mt-2">Modifier</button>
+              <button type="submit" class="btn btn-success center-block mt-2">{{boutton}}</button>
             </div>
           </div>
         </form>
