--- a/public/views/psychologue/calendar.hbs
+++ b/public/views/psychologue/calendar.hbs
@@ -1,7 +1,7 @@
 <head>
 
-  <link rel="stylesheet" href="../../css/calendrierPsycho.css">
-  <script type="text/javascript" src="../../script/calendrierPsycho.js"></script>
+  <link rel="stylesheet" href="../../../css/calendrierPsycho.css">
+  <script type="text/javascript" src="../../../script/calendrierPsycho.js"></script>
 
 </head>
 
