--- a/public/views/psychologue/clients_profil.hbs
+++ b/public/views/psychologue/clients_profil.hbs
@@ -55,7 +55,7 @@
           <div class="row mt-2">
             <div class="col">
               <label for="courriel_contact">Courriel: </label>
-              <input value="{{dataValues.Email}}" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" type="email" class="form-control" name="courriel_contact" placeholder="Entrer le courriel du contact" {{../condition}}>
+              <input value="{{dataValues.Email}}" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$" type="email" class="form-control" name="courriel_contact" placeholder="Entrer le courriel du contact" {{../condition}}>
             </div>
 
             <div class="col">
@@ -67,21 +67,21 @@
           <div class="row mt-2">
             <div class="col">
               <label for="courriel_extra1">Courriel extra 1: </label>
-              <input value="{{dataValues.Email_Extra1}}" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" type="email" class="form-control" name="courriel_extra1" placeholder="Entrer le courriel du contact" {{../condition2}}>
+              <input value="{{dataValues.Email_Extra1}}" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$" type="email" class="form-control" name="courriel_extra1" placeholder="Entrer le courriel du contact" {{../condition2}}>
             </div>
           </div>
 
           <div class="row mt-2">
             <div class="col">
               <label for="courriel_extra2">Courriel extra 2: </label>
-              <input value="{{dataValues.Email_Extra2}}" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" class="form-control" name="courriel_extra2" placeholder="Entrer le courriel du contact" {{../condition2}}>
+              <input value="{{dataValues.Email_Extra2}}" type="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$" class="form-control" name="courriel_extra2" placeholder="Entrer le courriel du contact" {{../condition2}}>
             </div>
           </div>
 
           <div class="row mt-2">
             <div class="col">
               <label for="courriel_extra3">Courriel extra 3: </label>
-              <input value="{{dataValues.Email_Extra3}}" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" class="form-control" name="courriel_extra3" placeholder="Entrer le courriel du contact" {{../condition2}}>
+              <input value="{{dataValues.Email_Extra3}}" type="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$" class="form-control" name="courriel_extra3" placeholder="Entrer le courriel du contact" {{../condition2}}>
             </div>
           </div>
 
