--- a/public/views/psychologue/profil.hbs
+++ b/public/views/psychologue/profil.hbs
@@ -27,7 +27,7 @@
           <div class="row mt-2">
             <div class="col">
               <label for="courriel_psychologue">Courriel:</label>
-              <input value="{{courriel}}" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" class="form-control" name="courriel" placeholder="Entrer l'adresse courriel du contact" {{condition}}>
+              <input value="{{courriel}}" type="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$" class="form-control" name="courriel" placeholder="Entrer l'adresse courriel du contact" {{condition}}>
               <div class="valid-feedback">Valide.</div>
               <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
             </div>
