--- a/public/views/main/login.hbs
+++ b/public/views/main/login.hbs
@@ -21,13 +21,16 @@
             <label for="inputPassword">Mot de passe</label>
             <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Mot de passe" required>
           </div>
+          <div class="text-center">
           <button class="mt-4 btn btn-lg btn-success btn-block text-uppercase" type="submit">Connection</button>
+          </div>
         </form>
         <hr class="my-3">
 
         <h6 class="text-center">Vous n'avez pas de compte?</h6>
-        <a class="mt-3 btn btn-lg btn-success btn-block text-uppercase" href="register">Créer un compte</a>
-
+        <div class="text-center">
+          <a class="mt-3 btn btn-lg btn-success btn-block text-uppercase" href="register">Créer un compte</a>
+        </div>
       </div>
     </div>
   </div>
