added small details to signup page
added asterixis to the sign up page form

--- a/public/views/main/register.hbs
+++ b/public/views/main/register.hbs
@@ -22,14 +22,14 @@
         <form class="needs-validation" novalidate action="/register" method="post">
 
           <div class="form-group">
-            <label for="nom_client">Nom de l'enfant ou adolescent: </label>
+            <label for="nom_client">Nom de l'enfant ou adolescent<span style="color:red">*</span>: </label>
             <input type="text" class="form-control" name="nom_client" placeholder="Entrer le nom de famille" required autofocus>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
-            <label for="prenom_client">Prénom de l'enfant ou adolescent: </label>
+            <label for="prenom_client">Prénom de l'enfant ou adolescent<span style="color:red">*</span>: </label>
             <input type="text" class="form-control" name="prenom_client" placeholder="Entrer le prénom" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
@@ -48,28 +48,28 @@
           </div>
 
           <div class="form-group">
-            <label for="nom_contact1">Nom du Contact: </label>
+            <label for="nom_contact1">Nom du Contact<span style="color:red">*</span>: </label>
             <input type="text" class="form-control" name="nom_contact1" placeholder="Entrer le nom du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
-            <label for="prenom_contact1">Prénom du Contact: </label>
+            <label for="prenom_contact1">Prénom du Contact<span style="color:red">*</span>: </label>
             <input type="text" class="form-control" name="prenom_contact1" placeholder="Entrer le prénom du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
-            <label for="num_telephone_contact1">Numéro de téléphone (Format: 819-000-0000): </label>
+            <label for="num_telephone_contact1">Numéro de téléphone (Format: 819-000-0000)<span style="color:red">*</span>: </label>
             <input type="tel" class="form-control" name="num_telephone_contact1" placeholder="Entrer le numéro de téléphone du contact" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div id=divEmail1 class="form-group">
-            <label for="courriel_contact1">Courriel: </label>
+            <label for="courriel_contact1">Courriel<span style="color:red">*</span>: </label>
             <input type="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$" class="form-control" name="courriel_contact1" placeholder="Entrer l'adresse courriel du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
@@ -83,28 +83,28 @@
           </div>
 
           <div class="form-group">
-            <label for="nom_contact2">Nom du Contact: </label>
+            <label for="nom_contact2">Nom du Contact<span style="color:red">*</span>: </label>
             <input type="text" class="form-control" id="nom_contact2" name="nom_contact2" placeholder="Entrer le nom du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
-            <label for="prenom_contact2">Prénom du Contact: </label>
+            <label for="prenom_contact2">Prénom du Contact<span style="color:red">*</span>: </label>
             <input type="text" class="form-control" id="prenom_contact2" name="prenom_contact2" placeholder="Entrer le prénom du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
-            <label for="num_telephone_contact2">Numéro de téléphone (Format: 819-000-0000): </label>
+            <label for="num_telephone_contact2">Numéro de téléphone (Format: 819-000-0000)<span style="color:red">*</span>: </label>
             <input type="tel" class="form-control" id="num_telephone_contact2" name="num_telephone_contact2" placeholder="Entrer le numéro de téléphone du contact" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div id=divEmail2 class="form-group">
-            <label for="courriel_contact2">Courriel: </label>
+            <label for="courriel_contact2">Courriel<span style="color:red">*</span>: </label>
             <input type="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$" class="form-control" id="courriel_contact2" name="courriel_contact2" placeholder="Entrer l'adresse courriel du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
