--- a/public/views/psychologue/calendar.hbs
+++ b/public/views/psychologue/calendar.hbs
@@ -19,7 +19,7 @@
         <div class="row mb-2">
           <div class="col text-center">
             <button type="button" class="btn btn-success center-block mt-2" data-bs-toggle="modal" data-bs-target="#nouvelleDispo">Créer une Disponibilité</button>
-            <a href="" type="button" class="btn btn-success center-block mt-2">Liste des Réservations</a>
+            <a href="/psychologue/reservations/listeReservations" type="button" class="btn btn-success center-block mt-2">Liste des Réservations</a>
           </div>
         </div>
 
